fix: layout shift

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -80,7 +80,7 @@
     grid-column: 2;
   }
 
-  .home__part_reverse .home__links {
+  .featureBlockReverse .featuresList {
     grid-column: 2;
   }
 
